[scss] ensure button component get a default gap

--- a/.playground/assets/styling/components/buttons.scss
+++ b/.playground/assets/styling/components/buttons.scss
@@ -1,5 +1,6 @@
 .ht-c-primary-btn-style {
   display: flex;
+  gap: 8px;
   align-items: center;
   border: none;
   border-radius: 2px;
